config/postgres-k8s-config.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgresdb-vol
          persistentVolumeClaim:
            claimName: postgres-volume-claim
      containers:
        - name: postgres-pod
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres-port
              containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb-vol

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: NodePort  //指定service类型
  ports:
#  供集群中其它container访问端口
    - port: 5432
#    转向后端pod中container暴露的端口
      targetPort: "postgres-port"
#      节点暴露的端口
      nodePort: 31543
  selector:
    app: postgres
