config/product-istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-vir-ser
spec:
  hosts:
    - "*"
  gateways:
    - istio-default-gateway
  http:
    - match:
        - uri:
            prefix: /product
          headers:
            version:
              exact: v1
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v1
      fault:
         delay:
            percentage:
               value: 10
            fixedDelay: 1m   
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
      timeout: 5s   
    - match:
        - uri:
            prefix: /product
          headers:
            version:
              exact: v2
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v2
      fault:
         abort:
            percentage:
               value: 10
            httpStatus: 400
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
      timeout: 5s   
    - match:
        - uri:
            prefix: /product
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v1
          weight: 30
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v2
          weight: 70
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
      timeout: 5s   
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-des-rule
spec:
  host: "product-service.default.svc.cluster.local"
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    outlierDetection:
      consecutiveErrors: 5
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 60    
  subsets:
    - name: product-v1
      labels:
        app: product
        version: "v1"
    - name: product-v2
      labels:
        app: product
        version: "v2"
